--- a/index.html
+++ b/index.html
@@ -1,4 +1,28 @@
-<html><body><h2>ベンチマーク結果</h2><pre>
-ms1546の処理 x 7.56 ops/sec ±3.58% (25 runs sampled)
-ms1546の実行速度: 132.22ミリ秒
-</pre></body></html>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>実行速度ランキング</title>
+</head>
+<body>
+  <h1>実行速度ランキング</h1>
+  <ul id="ranking"></ul>
+
+  <script>
+    fetch('results.json')
+      .then(response => response.json())
+      .then(data => {
+        data.sort((a, b) => a.time - b.time);
+        const ranking = document.getElementById('ranking');
+        data.forEach((item, index) => {
+          const li = document.createElement('li');
+          li.textContent = `${index + 1}位: ${item.user} - ${item.time.toFixed(2)} ms`;
+          ranking.appendChild(li);
+        });
+      })
+      .catch(error => {
+        console.error('Error loading results:', error);
+      });
+  </script>
+</body>
+</html>
